Matching Game & Intro: Fixed: The image of the "cup" on the Equality Lab bucket isn't right (it shows the vertical boxes).
Matching Game: Fixed: Some edges appear to get cut off in the matching game when the matches are put in the containers
# 0.00.50 (62249) Mar 6, 2012
Matching Game: Fixed: Audio turns off after each level
Matching Game: Added delay time to the pitch playback so that low sounds don't end too quickly
Matching Game: Avoid matching numerical representations
Matching Game: Fixed: With numbers larger than 1, the representations shrink a bit too much when in the containers
Matching Game: Fixed: With the "+" representation, several edges seem to get cut off
Matching Game: When a match is kept, have the matches in the containers be each closer to the equal sign instead of pushed to the edge of the match "container"
Matching Game: Made the equals sign in score cells larger
Matching Game: Made yellow bars in equals sign thicker
Matching Game: Changed "My matches" to "My Matches"
Equality Lab: Fixed: The numbers do not look quite centered over the fraction dividing line
Equality Lab: Move the "right side" spinners over to the right (currently very tight to the fraction line on the equivalent fraction)
Equality Lab: Fixed: The icon for the horizontal bar on the bucket appears to have the right most edge cut off
Equality Lab: Fixed: The "icons" for both the horizontal bar and water cups should be shrunk slightly to fit better in the buttons
Fixed: The the representation control panel icons should be square
Equality Lab: Fixed: The Reset All button should have the same position as in tab 1, it is currently tucked more in the corner.
Intro: Fixed: Thicker borders should be grayed out when nothing in the pie
Intro: Increased spacing between the cakes
Intro: Shrink the cup "icon" 10 percent or so to fit better in the icon button
Intro: Fixed: The cups are not centered in the display area